syntax = "proto3";

package services;

// Auth Service
service AuthService {
    rpc Authenticate (AuthRequest) returns (AuthResponse);
}

message AuthRequest {
    string username = 1;
    string password = 2;
}

message AuthResponse {
    string token = 1;
}

// Customer Service
service CustomerService {
    rpc CreateCustomer (CreateCustomerRequest) returns (Customer);
    rpc GetCustomer (GetCustomerRequest) returns (Customer);
}

message CreateCustomerRequest {
    string name = 1;
    string email = 2;
}

message GetCustomerRequest {
    string id = 1;
}

message Customer {
    string id = 1;
    string name = 2;
    string email = 3;
}

// Product Service
service ProductService {
    rpc CreateProduct (CreateProductRequest) returns (Product);
    rpc GetProduct (GetProductRequest) returns (Product);
}

message CreateProductRequest {
    string name = 1;
    float price = 2;
}

message GetProductRequest {
    string id = 1;
}

message Product {
    string id = 1;
    string name = 2;
    float price = 3;
}

// Order Service
service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (Order);
    rpc GetOrder (GetOrderRequest) returns (Order);
}

message CreateOrderRequest {
    string customer_id = 1;
    repeated string product_ids = 2;
}

message GetOrderRequest {
    string id = 1;
}

message Order {
    string id = 1;
    string customer_id = 2;
    repeated string product_ids = 3;
    string created_at = 4;
}
